# tiko

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  register.cpp  tie.cpp  tiko.cpp
dao/: CMakeLists.txt  pet.cpp  pet.h  user.cpp  user.h
diverse/: CMakeLists.txt  authorize.cpp  authorize.h
diverse/auto/8hao/: authorize.cpp
diverse/manual/: authorize.cpp
tg/: CMakeLists.txt  client.cpp  client.h  command.cpp  command.h  routine.cpp  routine.h
tg/routine/: authorization.cpp  option.cpp  user.cpp
utils/: CMakeLists.txt  assert.h  database.cpp  database.h  defer.h  logger.cpp  logger.h  schedule.cpp  schedule.h  variable.cpp  variable.h
